2001-11-09  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_bind_to_control): add paranoid check.

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_unset_container): fix possible
	re-enterancy issue.

	* bonobo/bonobo-socket.c
	(bonobo_socket_plug_removed): impl.
	(bonobo_socket_class_init): hook.

	* tests/test-moniker.c (display_as_control): use
	bonobo_main.
	(main): debug_shutdown.

2001-11-08  Michael Meeks  <michael@ximian.com>

	* glade/glade-bonobo.c
	(bonobo_window_find_internal_child): impl.
	(glade_module_register_widgets): upd.

2001-11-08  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control.c (bonobo_control_construct):
	don't hold a ref on ourselves.

	* bonobo/bonobo-plug.c (bonobo_plug_delete_event): don't
	chain to a NULL pointer.

2001-11-08  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-container.c
	(impl_Bonobo_UIContainer_setNode): upd. spelling for Darin.
	(impl_Bonobo_UIContainer_getAttr): upd.

	* bonobo/bonobo-ui-component.c (impl_get_prop): ditto.

	* bonobo/bonobo-plug.c (bonobo_plug_destroy_event): rename
	(bonobo_plug_delete_event): to this.

2001-11-07  jacob berkman  <jacob@ximian.com>

	* glade/Makefile.am (glademoduledir): install into our prefix
	rather than libglade's

	* configure.in: remove glade module dir check

2001-11-07  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_set_remote_window): add disgusting
	hacks around GtkPlug brokenness in the in-proc case.

	* bonobo/bonobo-widget.c
	(bonobo_widget_construct_control_from_objref): remove
	sinking feeling.

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_set_remote_window): an ugly,
	ugly hack to make the control play ball in-proc.

	* bonobo/bonobo-plug.c (bonobo_plug_realize): impl.
	(bonobo_plug_class_init): hook.

	* tests/control/test-control.c (create_frame):
	remove bogus remote faking, we need to fool Gdk too.
