@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: libbonobui
 Description: libbonoboui
-Requires: glib-2.0 ORBit-2.0 libxml-2.0 libbonobo-2.0
+Requires: glib-2.0 ORBit-2.0 libxml-2.0 libbonobo-2.0 libgnomecanvas-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lbonoboui-2
 Cflags: -I${includedir}/libbonoboui-2.0
