@@ -1,8 +1,12 @@
-text_files = \
-	README \
-	std-ui.xml		\
-	ui-faq.txt		\
-	ui-xml.txt		\
+text_files =				\
+	README				\
+	object-hierarchy.txt		\
+	ui-across-boundaries.txt	\
+	control.txt			\
+	compdoc.html			\
+	std-ui.xml			\
+	ui-faq.txt			\
+	ui-xml.txt			\
 	bonobo.dtd
 
 
